--- a/sass/sections/_solution.scss
+++ b/sass/sections/_solution.scss
@@ -1,6 +1,6 @@
 .solution {
   margin-bottom: var(--offset-a2);
-  padding: var(--offset-a2) 0;
+  // padding: var(--offset-a2) 0;
   &__container {
     position: relative;
   }
